# hello-voxelmorph

./: .gitmodules  README.md
chest-ct-tlc-rc/: .gitignore  Dockerfile  README.md  debug.py  hola.sh  register_transform.py  setup.py  utils.py
chest-ct-tlc-rc/synthmorph_wrapper/: register_transform.py
chest-ct-tlc-rc/test/: README.md  input.json
simple-elastix/: README.md  qc.pyBAK.py  register_utils.pyBAK.py  resample.py  run_itk_elastix.py  run_simple_elastix.py  utils.py
synthmorph-from-scratch/: .dockerignore  .gitignore  Dockerfile  README.md  build_and_push.sh  config-single-gpu.json  config.json  foobar.py  register_one_shot.py  requirements.txt  train.sh  train.sub
synthmorph-wrapper/: Dockerfile  README.md  build_and_push.sh  pyproject.toml
synthmorph-wrapper/synthmorph_wrapper/: register_transform.py  utils.py
synthmorph-wrapper/test/: .gitignore  README.md  hola_jacobian.py  input.json  test.py  test.sh
synthmorph_wrapper/: .gitignore  Dockerfile  README.md  build_and_push.sh  debug.py  setup.py
voxelmorph/: .dockerignore  .gitignore  Dockerfile  Dockerfile.tf  Dockerfile.torch  README.md  build_and_push.sh  mylosses.py  register.py  register_full_res.py  register_one_shot.py  register_one_shot_256.py  requirements-tf.txt  requirements-torch.txt  requirements.txt  requirementsOLD.txt  train.py  utils.py
voxelmorph-from-scratch/: README.md  condor.sub  mylist.txt  register.py  test-tl-cvib.csv  tl.csv  train.py  train.sh
voxelmorpth-from-scratch/: README.md
wrapper/: README.md  build_and_push.sh  regis.condor  setup.py
(+64 files in other folders)
